configuracao backend terraform

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-iac/terraform/.terraform/
-iac/terraform/codigo_terraform/terraform.tfstate
-iac/terraform/codigo_terraform/terraform.tfstate.backup
+iac/terraform/terraform_internos/
+iac/terraform/codigo_terraform/.terraform/
 iac/terraform/codigo_terraform/.terraform.lock.hcl
